omx: fixed type error in printf call

%zu expects size_t

https://bugzilla.gnome.org/show_bug.cgi?id=699008